--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/Catalogue
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
