--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-
 spring.datasource.url=jdbc:mysql://localhost:3306/Catalogue
 spring.datasource.username=root
-
-spring.datasource.password=
-
-
+spring.datasource.password=1234
 spring.jpa.show-sql=true
 server.port=8081
 spring.jpa.generate-ddl=true
