--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Catalogue
+spring.datasource.url=jdbc:mysql://localhost:3306/Catalogue?CreateDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 server.port=8081
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl.auto=create
+spring.jpa.hibernate.ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
