--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.password=1234
 spring.jpa.show-sql=true
 server.port=8081
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl.auto=update
+spring.jpa.hibernate.ddl.auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
