working jms and activeMQ

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ server.port=8081
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl.auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+spring.artemis.mode=native
+spring.jms.broker-url=tcp://176.31.162.217:61616
