--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Catalogue?CreateDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/catalogue
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql=true
