--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,13 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version> <!-- or the latest version -->
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.24.2</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
