--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version> <!-- or the latest version -->
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.220</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
         <dependency>
             <groupId>org.assertj</groupId>
